Upgrade to Spring Boot 4.0, version 1.7.10